# lAdAD-Neural

./: .gitignore  Generate_MinGW_Makefile_GCC.bat  Generate_SublimeText_Project_GNU_GCC.sh  Generate_VisualStudio_Solution_CLANG_LLVM.bat  Generate_VisualStudio_Solution_MSVC.bat  Generate_Xcode.sh  LICENSE.md  README.md  Setup.bat  Setup.sh
Neural/Python/: matplotlib_test.py  network.py  required_components.txt
Neural/Source/: CMakeLists.txt
Neural/Source/BasicPerceptron/: CMakeLists.txt
Neural/Source/BasicPerceptron/Source/: BasicPerceptron.cpp
Neural/Source/BasicPerceptronC/: CMakeLists.txt
Neural/Source/BasicPerceptronC/Include/: BasicPerceptron.h
Neural/Source/BasicPerceptronC/Source/: main.c
Neural/Source/BasicPerceptronCPP/: CMakeLists.txt
Neural/Source/BasicPerceptron_C/: CMakeLists.txt
Neural/Source/BasicPerceptron_C/Include/: BasicPerceptron.h  IntArray.h
Neural/Source/BasicPerceptron_C/Source/: BasicPerceptron.c  BasicPerceptron_C.c  IntArray.c  main.c
Neural/Source/NeuralFrameworkC/: CMakeLists.txt
Neural/Source/NeuralFrameworkC/Include/: NeuralFrameworkC
Neural/Source/NeuralFrameworkCPP/: CMakeLists.txt
Neural/Source/NeuralFrameworkCPP/Include/: NeuralFrameworkCPP.h
Neural/Source/NeuralFrameworkCPP/Source/: manifest.cpp
Neural/Source/NeuralFrameworkTestC/: CMakeLists.txt
Neural/Source/NeuralFrameworkTestC/Source/: main.c
Neural/Source/PerceptronLogicGates/: CMakeLists.txt
Neural/Source/PerceptronLogicGates/Source/: PerceptronLogicGates.cpp
Neural/Tools/: DefaultConfig.cmake
Neural/Tools/Scripts/Mac/: Generate_Xcode.sh
(+17 files in other folders)
